--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/slightGrey"
-    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.ProfileManagement">
-
+    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.UpdateProfile">
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -50,79 +48,65 @@
                 app:layout_constraintTop_toBottomOf="@+id/field_contact" />
 
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/field_store_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="24dp"
-                        android:hint="@string/field_Store_name"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/storeBanner">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/field_store_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:hint="@string/field_Store_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/storeBanner">
 
-                        <android.support.design.widget.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="@color/colorAccent"
-                            android:id="@+id/input_name"
-                            android:drawablePadding="10dp" />
-                    </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorAccent"
+                    android:id="@+id/input_name"
+                    android:drawablePadding="10dp" />
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/field_address"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:hint="@string/field_store_address"
-                app:layout_constraintEnd_toStartOf="@+id/getLocation"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/field_store_name">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/input_address"
-                    android:enabled="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/input_address"
                     android:backgroundTint="@color/colorAccent"
                     android:drawablePadding="10dp" />
             </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/field_contact"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        android:hint="@string/contact_hint"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/field_address">
-                        <android.support.design.widget.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="@color/colorAccent"
-                            android:id="@+id/input_contact"
-                            android:drawablePadding="10dp" />
-                    </android.support.design.widget.TextInputLayout>
-
-            <ImageView
-                android:id="@+id/getLocation"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="8dp"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/field_contact"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/ic_location_on_black_24dp"
-                android:tint="@color/colorAccent"
-                app:layout_constraintBottom_toBottomOf="@+id/field_address"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/field_address" />
+                android:hint="@string/contact_hint"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/field_address">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorAccent"
+                    android:id="@+id/input_contact"
+                    android:drawablePadding="10dp" />
+            </android.support.design.widget.TextInputLayout>
 
             <de.hdodenhof.circleimageview.CircleImageView
 
