--- a/app/src/main/res/layout/inventory_drawer_layout.xml
+++ b/app/src/main/res/layout/inventory_drawer_layout.xml
@@ -5,20 +5,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="250dp"
     android:layout_height="match_parent"
-    android:background="@color/colorTeal"
     >
+    <ImageView
+        android:layout_width="match_parent"
+        android:id="@+id/drawerImgBackground"
+        android:src="@drawable/food_background"
+        android:scaleType="centerCrop"
+        android:layout_height="match_parent" />
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/drawerCOlor"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/storeIcon"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/sample"
-        app:civ_border_color="@color/colorAccent"
+        app:civ_border_color="@color/colorWhite"
         app:civ_border_width="2dp"
         app:civ_circle_background_color="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,15 +44,12 @@
         android:id="@+id/textStoreName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:textAlignment="center"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Android Based POS"
-        android:textSize="15sp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@+id/storeIcon"
         app:layout_constraintTop_toBottomOf="@+id/storeIcon" />
 
     <View
@@ -44,7 +59,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:id="@+id/bottomDivider"
-        android:background="@color/colorAccent"
+        android:background="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/text_signOut"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,45 +83,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
         android:drawablePadding="10dp"
-        android:drawableTint="@color/colorAccent"
+        android:drawableTint="@color/colorWhite"
         android:text="Sign Out"
-        android:textSize="20sp"
         android:textAllCaps="true"
         android:textColor="@color/colorWhite"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/categoryList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/addCategory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topDivider"></android.support.v7.widget.RecyclerView>
-
     <TextView
-        android:drawablePadding="10dp"
-        android:textSize="15dp"
         android:id="@+id/addCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:drawableLeft="@drawable/ic_add_circle_black_24dp"
-        android:drawableTint="@color/colorAccent"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/colorWhite"
         android:text="Add Category"
         android:textColor="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@id/bottomDivider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/accountSettings" />
+
+    <TextView
+        android:id="@+id/accountSettings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/colorWhite"
+        android:text="Account Settings"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topDivider" />
 
 
 </android.support.constraint.ConstraintLayout>
