--- a/app/src/main/res/layout/resturant_item_grid.xml
+++ b/app/src/main/res/layout/resturant_item_grid.xml
@@ -9,17 +9,19 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:cardElevation="5dp"
+        app:cardElevation="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/bottomline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
+            android:background="@drawable/cardbackground"
             android:layout_height="match_parent">
 
             <ImageView
