--- a/app/src/main/res/layout/activity_add_to_inventroy_restaurant.xml
+++ b/app/src/main/res/layout/activity_add_to_inventroy_restaurant.xml
@@ -36,6 +36,22 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
+            <Button
+                android:id="@+id/btnAddVariant"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/butoon_save"
+                android:padding="10dp"
+                android:text="Add Variant"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/add_category"
+                app:layout_constraintTop_toBottomOf="@+id/container_item_price" />
+
             <ImageView
                 android:id="@+id/product_banner"
                 android:layout_width="match_parent"
@@ -171,14 +187,16 @@
                 android:id="@+id/dropDownCategory"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/bottomline"
                 android:padding="8dp"
                 android:spinnerMode="dialog"
                 android:textAlignment="center"
                 android:tooltipText="Category"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/divider"
+                app:layout_constraintStart_toStartOf="@+id/container_menu_code"
                 app:layout_constraintTop_toBottomOf="@id/container_menu_code">
 
             </android.support.v7.widget.AppCompatSpinner>
@@ -223,6 +241,5 @@
         android:translationZ="3dp"
         android:id="@+id/prog"
         ></RelativeLayout>
-
 
 </android.support.constraint.ConstraintLayout>
