--- a/app/src/main/res/layout/resturant_item_grid.xml
+++ b/app/src/main/res/layout/resturant_item_grid.xml
@@ -9,38 +9,38 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:cardElevation="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bottomline"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="@drawable/cardbackground"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/cardbackground">
 
             <ImageView
                 android:id="@+id/imgBanner"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:scaleType="centerCrop"
                 android:background="@color/colorAccent"
-                android:src="@drawable/ic_camera" />
+                android:scaleType="centerCrop" />
 
             <TextView
+                android:id="@+id/label_itemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:textSize="15sp"
-                android:textColor="@color/colorAccent"
                 android:layout_marginTop="8dp"
                 android:text="Item Name"
-                android:id="@+id/label_itemName"
+                android:textColor="@color/colorAccent"
+                android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgBanner" />
 
@@ -68,23 +68,39 @@
 
             <ImageView
                 android:id="@+id/ic_delete"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/round_background"
+                android:padding="5dp"
                 android:src="@drawable/ic_delete_forever_white_48dp"
                 android:tint="@color/colorAccent"
-                app:layout_constraintStart_toEndOf="@+id/ic_edit"
-                app:layout_constraintTop_toBottomOf="@+id/label_itemCode" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/ic_edit"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/round_background"
+                android:padding="5dp"
                 android:src="@drawable/ic_edit_white_48dp"
                 android:tint="@color/colorAccent"
+                app:layout_constraintEnd_toStartOf="@+id/ic_delete"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Switch
+                android:id="@+id/switch_public"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:switchPadding="5dp"
+                android:text="Public"
+                android:textColor="@color/colorAccent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_itemCode" />
 
