--- a/app/src/main/res/layout/activity_maps_profile_update.xml
+++ b/app/src/main/res/layout/activity_maps_profile_update.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.MapsProfileUpdateActivity">
+    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.activity.MapsProfileUpdateActivity">
 
     <fragment
         android:id="@+id/map"
