--- a/app/src/main/res/layout/inventory_drawer_layout.xml
+++ b/app/src/main/res/layout/inventory_drawer_layout.xml
@@ -111,6 +111,35 @@
         app:layout_constraintTop_toBottomOf="@+id/accountSettings" />
 
     <TextView
+        android:id="@+id/stat_report"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:drawableLeft="@drawable/ic_timeline_black_24dp"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/colorWhite"
+        android:text="Reports"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addCategory" />
+
+    <TextView
+        android:id="@+id/messages"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:drawableLeft="@drawable/ic_chat_black_24dp"
+        android:drawablePadding="10dp"
+        android:drawableTint="@color/colorWhite"
+        android:text="Messages"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stat_report" />
+    <TextView
         android:id="@+id/accountSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
