--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     tools:context="com.pointofsalesandroid.androidbasedpos_inventory.activity.ChatActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
