--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,6 @@
         android:text="@string/app_name"
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Logo" />
@@ -35,11 +34,11 @@
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/logInFacebook"
+        app:layout_constraintBottom_toTopOf="@+id/logInGoogle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.66999996" />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/logInGoogle"
         android:layout_width="200dp"
@@ -47,7 +46,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/buttonloginbg"
         android:text="@string/logInGoolge"
         android:textAllCaps="false"
@@ -55,25 +54,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInFacebook"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/logInFacebook"
-        android:background="@drawable/buttonloginbg"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textAllCaps="false"
-        android:text="@string/logInFacebook"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/avi"
